Fix structure of image cropper modal

--- a/src/main/webapp/app/course/manage/course-update.component.scss
+++ b/src/main/webapp/app/course/manage/course-update.component.scss
@@ -67,22 +67,3 @@
     right: 25px;
     border: 1px solid var(--black);
 }
-
-.modal {
-    border-radius: 8px;
-    margin: auto;
-    padding: 20px;
-}
-
-.modal-header,
-.modal-footer {
-    padding: 12px 12px;
-}
-
-.modal-body {
-    padding: 20px;
-}
-
-.modal-footer {
-    text-align: right;
-}
